--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,10 @@
 <head>
   <title>Rubypanel</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
 </head>
 <body>
-
+<div class="content">
 <%= yield %>
-
+</div>
 </body>
 </html>
